app/assets/stylesheets/puzzletime.scss
@import "bootstrap_variables";
@import "bootstrap";
@import "mixins";

p {
    text-align:     justify;
}

div {
    text-align:     justify;
}

a.symbol {
	text-decoration: none;
	font-weight: 	 bold;
	font-size: 		 16px;
}

#content {
    @extend .container-fluid;
    margin-bottom: 40px;
}

.nav-tabs.nav-center > li, .nav-pills.nav-center > li {
    float:none;
    display:inline-block;
    *display:inline; /* ie7 fix */
     zoom:1; /* hasLayout ie7 trigger */
}

.nav-tabs.nav-center, .nav-pills.nav-center {
    text-align:center;
}

th {
    color:          #0087e3;
}
th.periodHead {
    text-align:     right;
}

#evaluation td {
	white-space: nowrap;
}

.btn + .cancel {
  margin-left: 10px;
}

.times_total_sum {
    font-weight:    bold;
    /* color: #f4a460; */
    padding-top:    10px;
    padding-bottom: 20px;
    white-space:    nowrap;
}

.notification {
    border: 2px solid #C9D8FF;
    background-color: #f0f0f0;
    margin: 0;
    margin-top: -16px;
	margin-bottom: 10px;
	padding: 2px;
}

.notification li {
	margin-left: 20px;
}

a.tooltip {
	font-weight: bolder;
	text-decoration: none;
}

a.tooltip span {
	display: 		none;
}

a.tooltip:hover {
	position:		relative;
}

a.tooltip:hover span {
	display: 		block;
	position:		absolute;
	top:			10px;
	left:			10px;
	z-index: 		3;
	background:		#ffffdd;
	color:			#333;
	white-space:	nowrap;
	padding:		1pt;
	border:			1px solid #ddd;
	font-weight:	normal;
	float:			left;
	text-align:		left;
}

.calendar {
    margin-left: 5px;
}

.ui-autocomplete li.project-autocomplete {
    text-align: left;

    .shortname, .name {
        display: inline-block;
        line-height: 25px;
        vertical-align: middle;
    }
    .shortname {
        font-weight: bold;
        margin-right: 10px;
    }
    .name {
        float: right;
    }
    .description {
        font-size: 11px;
    }
}

.right {
  text-align: right;
}

.center {
  text-align: center;
}

.list-search {
  margin-top: 20px;
  margin-bottom: 20px;
  width: 500px;
}

table.table td.action {
  width: 20px;
  text-align: center;
  white-space: nowrap;
}

footer {
  clear: both;
}

body.loading,
body.loading a:hover {
   cursor: progress !important;
}

@import "header";
@import "worktimes";
@import "icons";

